--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,7 @@
 image: gitpod/workspace-full
 
 tasks:
-  - init: ./mvnw clean install -U -DskipTests
+  - init: ./mvnw clean install -U -DskipTests; touch /workspace/xxx
     command: ./mvnw spring-boot:run
     name: Run PetClinic app
 
